--- a/rootdir/etc/init.g3.rc
+++ b/rootdir/etc/init.g3.rc
@@ -610,6 +610,9 @@ on property:service.bootanim.exit=1
 
     write /dev/cpuctl/cpu.notify_on_migrate "1"
 
+    # increase read ahead cache size
+    write /sys/block/mmcblk0/bdi/read_ahead_kb 512
+
     setprop ro.qualcomm.perf.cores_online 2
 
     start mpdecision
